Work on all rooms screen

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,11 @@
   },
   "include": [
     "src"
+  ],
+  "references": [
+    {
+      "path": "../game-server/types",
+      "prepend": true,
+    }
   ]
 }
