--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.3.11",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,10 +11,21 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-modal": "^3.12.0",
+    "graphql": "^15.5.0",
+    "konva": "^7.2.5",
+    "mobx": "^6.1.8",
+    "mobx-react-lite": "^3.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.4",
+    "react-icons": "^4.2.0",
+    "react-konva": "^17.0.1-3",
+    "react-modal": "^3.12.1",
     "react-scripts": "4.0.3",
+    "subscriptions-transport-ws": "^0.9.18",
     "typescript": "^4.1.2",
+    "use-image": "^1.0.7",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -39,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.32.8"
   }
 }
