--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-modal": "^3.12.0",
+    "@types/react-router-dom": "^5.1.7",
     "graphql": "^15.5.0",
     "konva": "^7.2.5",
     "mobx": "^6.1.8",
@@ -22,6 +23,7 @@
     "react-icons": "^4.2.0",
     "react-konva": "^17.0.1-3",
     "react-modal": "^3.12.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "subscriptions-transport-ws": "^0.9.18",
     "typescript": "^4.1.2",
