--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-linkify": "^1.0.0",
     "@types/react-modal": "^3.12.0",
     "@types/react-router-dom": "^5.1.7",
     "graphql": "^15.5.0",
@@ -22,6 +23,7 @@
     "react-hook-form": "^6.15.4",
     "react-icons": "^4.2.0",
     "react-konva": "^17.0.1-3",
+    "react-linkify": "^1.0.0-alpha",
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
