--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-linkify": "^1.0.0",
     "@types/react-modal": "^3.12.0",
     "@types/react-router-dom": "^5.1.7",
+    "@types/throttle-debounce": "^2.1.0",
     "graphql": "^15.5.0",
     "konva": "^7.2.5",
     "mobx": "^6.1.8",
@@ -28,6 +29,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "subscriptions-transport-ws": "^0.9.18",
+    "throttle-debounce": "^3.0.1",
     "typescript": "^4.1.2",
     "use-image": "^1.0.7",
     "web-vitals": "^1.0.1"
